--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetLife</title>
     <meta name="description" content="Garanta uma vida longa e cheia e cheia de alegria para o seu melhor amigo.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <img src="img/logo.svg" alt="Logo Pet Life">
+            <img src="img/logo-white.svg" alt="Logo Pet Life">
         </a>
         <nav>
             <a href="#incio">Início</a>
@@ -26,20 +30,21 @@
             <img src="img/start-img.svg" alt="Imagem Principal" width="580" height="580">
             <div>
                 <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                <p>
+                <p class="paragrafo">
                     A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais
                     dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo
                     o bem-estar, a saúde e a felicidade dos seus animais de estimação.
                 </p>
-                <a href="" target="_blank">Marque uma consulta</a>
-                <a href="#clinia">Conheça nossa clínica</a>
+                <a class="botao" href="#" target="_blank">Marque uma consulta</a>
+                <a class="botao-transparente" href="#clinica">Conheça nossa clínica</a>
             </div>
+            <img class="absolute" src="img/shape.svg" alt="">
         </section>
             <!-- Seção de clínica -->
         <section id="clinica">
             <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
-                <p>
+                <p class="paragrafo">
                     Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
                     Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
                     serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute
@@ -61,7 +66,7 @@
         <section id="farmacia">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
             <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-            <p>
+            <p class="paragrafo">
                 Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
                 petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
                 deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
@@ -76,10 +81,10 @@
             <img src="img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
             <div>
             <h2>Ficou alguma dúvida?</h2>
-            <div>
+            <div class="duvida">
                 <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                 A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
                 cirurgias,
                 tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de
@@ -87,28 +92,28 @@
                 para garantir a saúde e o bem-estar do seu pet.
                 </p>
             </div>
-            <div>
+            <div class="duvida">
                 <h3>Quais espécies de animais a clínica veterinária atende?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                 A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
                 pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
                 diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
                 </p>
             </div>
-            <div>
+            <div class="duvida">
                 <h3>A clínica da PetLife possui serviços de emergência?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                 Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
                 precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
                 ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                 </p>
             </div>
-            <div>
+            <div class="duvida">
                 <h3>A clínica oferece serviços de banho e tosa?</h3>
                 <img src="img/arrow-down.svg" alt="">
-                <p>
+                <p class="paragrafo">
                 Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
                 profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
                 técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
@@ -125,21 +130,21 @@
             <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
         </div>
         <div>
-            <strong>Links rápidos</strong>
+            <strong class="titulo">Links rápidos</strong>
                 <a href="#inicio">Início</a>
                 <a href="#clinica">Clínica</a>
                 <a href="#farmacia">Farmácia</a>
                 <a href="#duvidas">Dúvidas</a>
         </div>
         <div>
-            <strong>Encontre-nos</strong>
+            <strong class="titulo">Encontre-nos</strong>
                 <p>WhatsApp: (22) 98765-4321</p>
                 <p>Email: contato@petlife.com.br</p>
                 <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
         </div>
     </footer>
-  <div>
-    Desenvolvido por <a href="https://github.com/lucasaraujodev" target="_blank">@lucasaraujo.dev</a> na trilha Start na Programação 🤘 da OneBitCode.
+  <div id="copyright">
+    Desenvolvido por <a href="https://github.com/lucasaraujodev" target="_blank">@lucasaraujodev</a> na trilha Start na Programação 🤘 da OneBitCode.
   </div>
 </body>
 
