js script included
js script included

--- a/index.html
+++ b/index.html
@@ -146,6 +146,6 @@
   <div id="copyright">
     Desenvolvido por <a href="https://github.com/lucasaraujodev" target="_blank">@lucasaraujodev</a> na trilha Start na Programação 🤘 da OneBitCode.
   </div>
+  <script src="js/script.js"></script>
 </body>
-
 </html>
