english page included
Separation of original projetc from my additions. English page added as weel as comments, classes, divs and selectors translated.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetLife</title>
-    <meta name="description" content="Garanta uma vida longa e cheia e cheia de alegria para o seu melhor amigo.">
+    <meta name="description" content="Ensure a long and joyful life for your best friend.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -15,136 +15,114 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="img/logo-white.svg" alt="Logo Pet Life">
+            <img src="img/logo-white.svg" alt="Pet Life Logo">
         </a>
         <nav>
-            <a href="#incio">Início</a>
-            <a href="#clinica">Clínica</a>
-            <a href="#farmacia">Farmácia</a>
-            <a href="#duvidas">Dúvidas</a>
+            <a href="#home">Home</a>
+            <a href="#clinic">Clinic</a>
+            <a href="#pharmacy">Pharmacy</a>
+            <a href="#faq">FAQ</a>
         </nav>
     </header>
     <main>
-            <!-- Seção de início -->
-        <section id="inicio">
-            <img src="img/start-img.svg" alt="Imagem Principal" width="580" height="580">
+            <!-- home section -->
+        <section id="home">
+            <img src="img/start-img.svg" alt="Main Image" width="580" height="580">
             <div>
-                <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                <p class="paragrafo">
-                    A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais
-                    dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo
-                    o bem-estar, a saúde e a felicidade dos seus animais de estimação.
+                <h1>Ensure a long and joyful life for your best friend.</h1>
+                <p class="paragraph">
+                    PetLife is your trusted refuge for complete care for your pet. With dedicated professionals and comprehensive services, we offer a welcoming and personalized experience, ensuring the well-being, health and happiness of your pets.   
                 </p>
-                <a class="botao" href="#" target="_blank">Marque uma consulta</a>
-                <a class="botao-transparente" href="#clinica">Conheça nossa clínica</a>
+                <a class="button" href="#" target="_blank">Schedule an appoinment</a>
+                <a class="transparent-button" href="#clinic">Discover our clinic</a>
             </div>
             <img class="absolute" src="img/shape.svg" alt="">
         </section>
-            <!-- Seção de clínica -->
-        <section id="clinica">
+            <!-- clinic section -->
+        <section id="clinic">
             <div>
-                <h2>Cuidado Veterinário de Qualidade</h2>
-                <p class="paragrafo">
-                    Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
-                    Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
-                    serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute
-                    da atenção personalizada e do carinho que seu pet merece.
+                <h2>Quality Veterinary Care</h2>
+                <p class="paragraph">
+                    Our veterinary clinic is the place where passion for animals meets excellence in veterinary care. Under the leadership of Dr. Vivien Reid, a highly qualified and committed professional, we provide health and wellness services for pets of all species. Come and visit our clinic and enjoy the personalized attention and affection that your pet deserves.
                 </p>
                 <ul>
-                    <li>Consultas de rotina e exames de saúde abrangentes</li>
-                    <li>Vacinação e imunização</li>
-                    <li>Cirurgias e procedimentos veterinários</li>
-                    <li>Tratamento e controle de doenças</li>
-                    <li>Odontologia veterinária</li>
-                    <li>Atendimento de emergência 24 horas</li>
-                    <li>Nutrição e aconselhamento alimentar personalizado</li>
+                    <li>Routine appointments and comprehensive health screenings</li>
+                    <li>Vaccination and immunization</li>
+                    <li>Veterinary surgeries and procedures</li>
+                    <li>Disease treatment and control</li>
+                    <li>Veterinary dentistry</li>
+                    <li>24-hour emergency service</li>
+                    <li>Personalized nutrition and dietary advice</li>
                 </ul>
             </div>
             <img src="img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
         </section>
-            <!-- Seção de farmácia -->
-        <section id="farmacia">
-            <h2>Venha conferir o nosso petshop e farmácia</h2>
-            <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-            <p class="paragrafo">
-                Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
-                petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
-                deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
-                uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários,
-                garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para
-                cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos
-                tornou referência na área veterinária.
+            <!-- pharmacy section -->
+        <section id="pharmacy">
+            <h2>Come check out our pet shop and pharmacy</h2>
+            <img src="img/shop-img.svg" alt="Pharmacy Image" width="645" height="430" loading="lazy">
+            <p class="paragraph">
+                In addition to being a trusted veterinary clinic, we also have a complete pet shop and pharmacy. Our petshop offers a wide selection of high quality products, from balanced foods and snacks from delicious to fun toys and stylish accessories for your pet. In our pharmacy you will find a variety of medications, care products and supplements recommended by our veterinarians,ensuring that the well-being and health of your beloved pet are always in good hands. Everything you need to Caring for and pampering your pet is here, in our petshop and pharmacy, with the same dedication and quality that we became a reference in the veterinary field.
             </p>
         </section>
-            <!-- Seção de perguntas frequentes -->
-        <section id="duvidas">
-            <img src="img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
+            <!-- faq section -->
+        <section id="faq">
+            <img src="img/faq-img.svg" alt="FAQ" width="540" height="540" loading="lazy">
             <div>
-            <h2>Ficou alguma dúvida?</h2>
-            <div class="duvida">
-                <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
-                cirurgias,
-                tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de
-                pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados
-                para garantir a saúde e o bem-estar do seu pet.
+            <h2>Any questions left?</h2>
+            <div class="faq">
+                <h3>What services are offered by the PetLife clinic?</h3>
+                <img src="img/arrow-down.svg" alt="question number 1">
+                <p class="paragraph">
+                    The PetLife clinic offers a wide range of services, including routine appointments, vaccinations, surgeries, disease treatment, dental care, 24-hour emergency care, flea, tick and worm prevention programs, among others. Our goal is to provide comprehensive, personalized care to ensure your pet's health and well-being.
                 </p>
             </div>
-            <div class="duvida">
-                <h3>Quais espécies de animais a clínica veterinária atende?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
-                pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
-                diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
+            <div class="faq">
+                <h3>What species of animals does the veterinary clinic serve?</h3>
+                <img src="img/arrow-down.svg" alt="question number 2">
+                <p class="paragraph">
+                    PetLife's veterinary clinic treats pets of all species, including dogs, cats, birds, rodents and reptiles. Our professionals have the knowledge and experience to care for different types of animals, offering specialized and dedicated care for each one of them.
                 </p>
             </div>
-            <div class="duvida">
-                <h3>A clínica da PetLife possui serviços de emergência?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
-                precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
-                ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
+            <div class="faq">
+                <h3>Does the PetLife clinic have emergency services?</h3>
+                <img src="img/arrow-down.svg" alt="question number 3">
+                <p class="paragraph">
+                    Yes, the PetLife veterinary clinic offers 24-hour emergency services. If your pet needs immediate veterinary care outside of office hours, our team is ready to help, providing urgent care and appropriate treatment to ensure your pet's well-being.
                 </p>
             </div>
-            <div class="duvida">
-                <h3>A clínica oferece serviços de banho e tosa?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
-                profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
-                técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
-                proporcionar uma experiência relaxante e agradável para eles.
+            <div class="faq">
+                <h3>Does the clinic offer bathing and grooming services?</h3>
+                <img src="img/arrow-down.svg" alt="question number 4">
+                <p class="paragraph">
+                    Yes, the PetLife veterinary clinic offers professional bathing and grooming services. Our team of experienced professionals ensures that your pet receives appropriate care using high-quality products and safe techniques. Bathing and grooming help maintain hygiene, the health of your pet's skin and coat, as well as providing a relaxing and pleasant experience for them.
                 </p>
             </div>
             </div>
         </section>
     </main>
-        <!-- Rodapé -->
+        <!-- footer -->
     <footer>
         <div>
             <img src="img/logo.svg" alt="PetLife">
-            <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
+            <p>Caring with love, living with joy: PetLife, where pets' lives are happier!</p>
         </div>
         <div>
-            <strong class="titulo">Links rápidos</strong>
-                <a href="#inicio">Início</a>
-                <a href="#clinica">Clínica</a>
-                <a href="#farmacia">Farmácia</a>
-                <a href="#duvidas">Dúvidas</a>
+            <strong class="title">Quick Links</strong>
+                <a href="#home">Home</a>
+                <a href="#clinic">Clinic</a>
+                <a href="#pharmacy">Pharmacy</a>
+                <a href="#faq">FAQ</a>
         </div>
         <div>
-            <strong class="titulo">Encontre-nos</strong>
-                <p>WhatsApp: (22) 98765-4321</p>
-                <p>Email: contato@petlife.com.br</p>
-                <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
+            <strong class="title">Find Us</strong>
+                <p>Contact: 020 7686 6000</p>
+                <p>Email: contact@petlife.com</p>
+                <p>Adress: 232, Seven Sisters Road - London</p>
         </div>
     </footer>
   <div id="copyright">
-    Desenvolvido por <a href="https://github.com/lucasaraujodev" target="_blank">@lucasaraujodev</a> na trilha Start na Programação 🤘 da OneBitCode.
+    Developed by <a href="https://github.com/lucasaraujodev" target="_blank">@lucasaraujodev</a> on the Start Programming track 🤘 from OneBitCode.
   </div>
   <script src="js/script.js"></script>
 </body>
