--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetLife</title>
+    <link rel="icon" type="image" href="/img/logo.svg">
     <meta name="description" content="Ensure a long and joyful life for your best friend.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <header>
         <a href="index.html">
             <img src="img/logo-white.svg" alt="Pet Life Logo">
         </a>
-        <nav>
+        <nav id="navbar">
             <a href="#home">Home</a>
             <a href="#clinic">Clinic</a>
             <a href="#pharmacy">Pharmacy</a>
@@ -29,11 +28,11 @@
         <section id="home">
             <img src="img/start-img.svg" alt="Main Image" width="580" height="580">
             <div>
-                <h1>Ensure a long and joyful life for your best friend.</h1>
+                <h1>Ensure a long and joyful life for your best friend</h1>
                 <p class="paragraph">
                     PetLife is your trusted refuge for complete care for your pet. With dedicated professionals and comprehensive services, we offer a welcoming and personalized experience, ensuring the well-being, health and happiness of your pets.   
                 </p>
-                <a class="button" href="#" target="_blank">Schedule an appoinment</a>
+                <a class="button" href="#" target="_blank">Schedule an appointment</a>
                 <a class="transparent-button" href="#clinic">Discover our clinic</a>
             </div>
             <img class="absolute" src="img/shape.svg" alt="">
@@ -116,9 +115,9 @@
         </div>
         <div>
             <strong class="title">Find Us</strong>
-                <p>Contact: 020 7686 6000</p>
-                <p>Email: contact@petlife.com</p>
-                <p>Adress: 232, Seven Sisters Road - London</p>
+                <a href="https://wa.me/442076866010?text=" target="_blank"><p>Contact: 020 7686 6000</p></a>
+                <a href="mailto:info@uckg.org" target="_blank"><p>Email: contact@petlife.com</p></a>
+                <a href="https://uckg.org/addresses" target="_blank"><p>Address: 232, Seven Sisters Road - London</p></a>
         </div>
     </footer>
   <div id="copyright">
