--- a/index-pt.html
+++ b/index-pt.html
@@ -1,54 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetLife</title>
+    <link rel="icon" type="image" href="/img/logo.svg">
     <meta name="description" content="Garanta uma vida longa e cheia e cheia de alegria para o seu melhor amigo.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
     <header>
         <a href="index.html">
-            <img src="img/logo-white.svg" alt="Logo Pet Life">
+            <img src="img/logo-white.svg" alt="Pet Life Logo">
         </a>
-        <nav>
-            <a href="#incio">Início</a>
-            <a href="#clinica">Clínica</a>
-            <a href="#farmacia">Farmácia</a>
-            <a href="#duvidas">Dúvidas</a>
+        <nav id="navbar">
+            <a href="#home">Início</a>
+            <a href="#clinic">Clínica</a>
+            <a href="#pharmacy">Farmácia</a>
+            <a href="#faq">Dúvidas</a>
         </nav>
     </header>
     <main>
-            <!-- Seção de início -->
-        <section id="inicio">
-            <img src="img/start-img.svg" alt="Imagem Principal" width="580" height="580">
+            <!-- home section -->
+        <section id="home">
+            <img src="img/start-img.svg" alt="Main Image" width="580" height="580">
             <div>
                 <h1>Garanta uma vida longa e cheia de alegria para o seu melhor amigo</h1>
-                <p class="paragrafo">
-                    A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais
-                    dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo
-                    o bem-estar, a saúde e a felicidade dos seus animais de estimação.
+                <p class="paragraph">
+                    A PetLife é o seu refúgio de confiança para o cuidado completo do seu pet. Com profissionais dedicados e serviços abrangentes, oferecemos uma experiência acolhedora e personalizada, garantindo o bem-estar, a saúde e a felicidade dos seus animais de estimação.   
                 </p>
-                <a class="botao" href="#" target="_blank">Marque uma consulta</a>
-                <a class="botao-transparente" href="#clinica">Conheça nossa clínica</a>
+                <a class="button" href="#" target="_blank">Marque uma consulta</a>
+                <a class="transparent-button" href="#clinic">Conheça nossa clínica</a>
             </div>
             <img class="absolute" src="img/shape.svg" alt="">
         </section>
-            <!-- Seção de clínica -->
-        <section id="clinica">
+            <!-- clinic section -->
+        <section id="clinic">
             <div>
                 <h2>Cuidado Veterinário de Qualidade</h2>
-                <p class="paragrafo">
-                    Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários.
-                    Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos
-                    serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute
-                    da atenção personalizada e do carinho que seu pet merece.
+                <p class="paragraph">
+                    Nossa clínica veterinária é o local onde a paixão pelos animais se une à excelência em cuidados veterinários. Sob a liderança da Dra. Vivien Reid, uma profissional altamente qualificada e comprometida, oferecemos serviços de saúde e bem-estar para animais de estimação de todas as espécies. Venha conhecer nossa clínica e desfrute da atenção personalizada e do carinho que seu pet merece.
                 </p>
                 <ul>
                     <li>Consultas de rotina e exames de saúde abrangentes</li>
@@ -62,85 +56,68 @@
             </div>
             <img src="img/clinic-img.svg" alt="" width="480" height="480" loading="lazy">
         </section>
-            <!-- Seção de farmácia -->
-        <section id="farmacia">
+            <!-- pharmacy section -->
+        <section id="pharmacy">
             <h2>Venha conferir o nosso petshop e farmácia</h2>
-            <img src="img/shop-img.svg" alt="" width="645" height="430" loading="lazy">
-            <p class="paragrafo">
-                Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso
-                petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos
-                deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará
-                uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários,
-                garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para
-                cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que nos
-                tornou referência na área veterinária.
+            <img src="img/shop-img.svg" alt="Pharmacy Image" width="645" height="430" loading="lazy">
+            <p class="paragraph">
+                Além de ser uma clínica veterinária de confiança, também contamos com um completo petshop e farmácia. Nosso petshop oferece uma ampla seleção de produtos de alta qualidade, desde alimentos balanceados e petiscos deliciosos até brinquedos divertidos e acessórios elegantes para o seu pet. Na nossa farmácia, você encontrará uma variedade de medicamentos, produtos de cuidados e suplementos recomendados pelos nossos veterinários, garantindo que o bem-estar e a saúde do seu amado pet estejam sempre em boas mãos. Tudo o que você precisa para cuidar e mimar o seu pet está aqui, no nosso petshop e farmácia, com a mesma dedicação e qualidade que no tornou referência na área veterinária.
             </p>
         </section>
-            <!-- Seção de perguntas frequentes -->
-        <section id="duvidas">
-            <img src="img/faq-img.svg" alt="" width="540" height="540" loading="lazy">
+            <!-- faq section -->
+        <section id="faq">
+            <img src="img/faq-img.svg" alt="FAQ" width="540" height="540" loading="lazy">
             <div>
             <h2>Ficou alguma dúvida?</h2>
-            <div class="duvida">
+            <div class="faq">
                 <h3>Quais serviços são oferecidos pela clínica da PetLife?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação,
-                cirurgias,
-                tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de
-                pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados
-                para garantir a saúde e o bem-estar do seu pet.
+                <img src="img/arrow-down.svg" alt="question number 1">
+                <p class="paragraph">
+                    A clínica da PetLife oferece uma ampla gama de serviços, incluindo consultas de rotina, vacinação cirurgias, tratamento de doenças, cuidados odontológicos, atendimento de emergência 24 horas, programas de prevenção de pulgas, carrapatos e vermes, entre outros. Nosso objetivo é fornecer cuidados abrangentes e personalizados para garantir a saúde e o bem-estar do seu pet.
                 </p>
             </div>
-            <div class="duvida">
+            <div class="faq">
                 <h3>Quais espécies de animais a clínica veterinária atende?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
-                pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
-                diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
+                <img src="img/arrow-down.svg" alt="question number 2">
+                <p class="paragraph">
+                    A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.
                 </p>
             </div>
-            <div class="duvida">
+            <div class="faq">
                 <h3>A clínica da PetLife possui serviços de emergência?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
-                precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
-                ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
+                <img src="img/arrow-down.svg" alt="question number 3">
+                <p class="paragraph">
+                    Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.
                 </p>
             </div>
-            <div class="duvida">
+            <div class="faq">
                 <h3>A clínica oferece serviços de banho e tosa?</h3>
-                <img src="img/arrow-down.svg" alt="">
-                <p class="paragrafo">
-                Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
-                profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
-                técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
-                proporcionar uma experiência relaxante e agradável para eles.
+                <img src="img/arrow-down.svg" alt="question number 4">
+                <p class="paragraph">
+                    Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma experiência relaxante e agradável para eles.
                 </p>
             </div>
             </div>
         </section>
     </main>
-        <!-- Rodapé -->
+        <!-- footer -->
     <footer>
         <div>
             <img src="img/logo.svg" alt="PetLife">
             <p>Cuidando com amor, vivendo com alegria: PetLife, onde a vida dos pets é mais feliz!</p>
         </div>
         <div>
-            <strong class="titulo">Links rápidos</strong>
-                <a href="#inicio">Início</a>
-                <a href="#clinica">Clínica</a>
-                <a href="#farmacia">Farmácia</a>
-                <a href="#duvidas">Dúvidas</a>
+            <strong class="title">Links rápidos</strong>
+                <a href="#home">Início</a>
+                <a href="#clinic">Clínica</a>
+                <a href="#pharmacy">Farmáciay</a>
+                <a href="#faq">Dúvidas</a>
         </div>
         <div>
-            <strong class="titulo">Encontre-nos</strong>
-                <p>WhatsApp: (22) 98765-4321</p>
-                <p>Email: contato@petlife.com.br</p>
-                <p>Endereço: Av. 7 de Setembro, nº 42, Centro</p>
+            <strong class="title">Encontre-nos</strong>
+                <a href="https://www.universal.org/telefones/" target="_blank"><p>WhatsApp: (22) 98765-4321</p></a>
+                <a href="https://www.universal.org/contato-igreja/" target="_blank"><p>E-mail: contato@petlife.com</p></a>
+                <a href="https://www.universal.org/localizar" target="_blank"><p>Endereço: Av. Celso Garcia, nº 605, Brás</p></a>
         </div>
     </footer>
   <div id="copyright">
